[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lofar_helpers"
version = "1.0.0"
description = "LOFAR helper scripts and tools"
dependencies = ["numpy","tables","losoto","shapely","python-casacore","pyregion","astropy","pandas"]

[project.scripts]
split_polygon_facets = "ds9_helpers.split_polygon_facets:main"
crop_nan_boundaries = "fits_helpers.crop_nan_boundaries:main"
cut_fits_with_region = "fits_helpers.cut_fits_with_region:main"
close_h5 = "h5_helpers.close_h5:main"
concat_with_dummies = "ms_helpers.concat_with_dummies:main"
remove_flagged_stations = "ms_helpers.remove_flagged_stations:main"
applycal = "ms_helpers.applycal:main"
subtract_with_wsclean = "subtract.subtract_with_wsclean:main"

[tool.setuptools]
packages = ["ds9_helpers", "fits_helpers", "h5_helpers", "ms_helpers", "subtract"]
