[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="cortex"
dynamic=["version"]
requires-python = ">= 3.8"
description = "AI model inference replacement for early-stopping in calibration iterations."
authors = [
  {name = "Jurjen de Jong", email = "jurjendejong@strw.leidenuniv.nl" },
  {name = "Duncan Kampert", email = "duncan.kampert@surf.nl" },
  {name = "Robert Jan Schlimbach", email = "robert-jan.schlimbach@surf.nl" },
]
readme = "README.md"

[tool.setuptools]
packages = ["cortex"]  # Specify the package(s) you want to install
package-dir = {"" = "cortex"}  # Point to the source directory

[tool.setuptools.packages.find]
where = "cortex"  # This is the path relative to the pyproject.toml
